--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native": "^0.14.2"
+    "react-native": "^0.14.2",
+    "react-native-router-redux": "^0.2.1",
+    "react-redux": "^3.1.0",
+    "redux": "^3.0.4"
   }
 }
